# Nika-AI

./: .gitignore  README.md  config.yaml  pyproject.toml
nika/: __init__.py  config.py  main.py
nika/agent/: auto_memory.py  context_builder.py  loop.py  planner.py  response_parser.py  safety.py
nika/llm/: client.py  prompt_templates.py
nika/logging/: audit_logger.py  event_bus.py
nika/memory/: episodic.py  long_term.py  memory_manager.py  semantic.py  short_term.py
nika/session/: manager.py  task_queue.py
nika/tools/: base.py  clipboard.py  code_runner.py  diff.py  document_writer.py  filesystem.py  memory_tools.py  notification.py  pdf_export.py  process_manager.py  registry.py  scheduler.py  screen.py  shell.py  system_info.py  web_fetch.py  web_search.py
nika/ui/tui/: app.py
nika/ui/tui/themes/: nika_dark.tcss
nika/ui/tui/widgets/: chat_view.py  memory_panel.py  status_bar.py  task_panel.py  tool_panel.py
nika/ui/web/: server.py
nika/ui/web/static/: index.html
